Added CSS for practice

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes!</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <h1>Recipes forever!</h1>
+    <div class="titles">Recipes biach!</div>
     <ul>
         <ul><a href="recipes/spaghetti.html">Spaghetti, for bitches.</a></ul>
         <ul><a href="recipes/coffee.html">Coffee, for addicts.</a></ul>
