Added a lot of CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="titles">Recipes biach!</div>
+    <img src="recipes/images/spaghetti.jpg"> <img src="recipes/images/coffee.jpg"> <img src="recipes/images/relationship.jpg">
     <ul>
         <ul><a href="recipes/spaghetti.html">Spaghetti, for bitches.</a></ul>
         <ul><a href="recipes/coffee.html">Coffee, for addicts.</a></ul>
