--- a/recipes/a-loving-partner.html
+++ b/recipes/a-loving-partner.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loving Partner</title>
+    <style>
+        h1 {
+            color: white;
+            background-color: red;
+        }
+        p {
+            color: white;
+            background-color: green;
+        }
+    </style>
 </head>
 <body>
     <h1>Getting a... relationship?</h1>
@@ -29,6 +39,6 @@
             like her too then go ahead and start dating, you'll eventually meet someone to be with
         </li>
     </ol>
-    <a href="../index.html">Now that you got some pussy, lets go back!</a>
+    <button style="background-color: yellow; color: white; font-size 18px;">Now that you got some pussy, lets go back!</button>
 </body>
 </html>
