--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee</title>
+    <link rel="stylesheet" href="styles/stylesheet-coffee.css">
 </head>
 <body>
-    <h1>Coffee, for your caffeine addicted ass</h1>
+    <div class="one">Coffee, for your caffeine addicted ass</div>
     <img src="images/coffee.jpg">
-    <h2>How to make some good ass coffee</h2>
+    <div class="one">How to make some good ass coffee</div>
     <p>I bet you're addicted, that's okay, we all kinda are bro, the secret to get as much caffeine out of your 
         coffee as possible is to let it sit before drinking it, let the beans release that good good.
     </p>
     <p>You should get harder roast if you like the bitter taste, otherwise get the lighter roast, both have around 
         the same caffeine so it'll be okay w/e you get.
     </p>
-    <h3>Ingredients</h3>
+    <div class="two">Ingredients</div>
     <ul>
         <li>Coffee of your choice</li>
         <li>Filtered water</li>
         <li>Salt</li>
     </ul>
-    <h3>Preparation</h3>
+    <div class="two">Preparation</div>
     <ol>
         <li>Firstly, boil the water, after it boils let it sit for a minute so it comes down to temperature</li>
         <li>Now comes the brewing, pour 200 ml of water over 15 grams of coffee per cup, and let it sit for 4 minutes,
