--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaghetti</title>
+    <link rel="stylesheet" href="styles/stylesheet-spaghetti.css">
 </head>
 <body>
     <img src="images/spaghetti.jpg" width = 300px>
-    <h2>Who doesn't like some good good?</h2>
+    <div class="title big">Who doesn't like some good good?</div>
     <p>I love some good Spaghetti, too bad my fucking lighter just broke</p>
     <p>You might be asking, does that happen often? and not, it doesn't but I guess I am just fucked right now!</p>
     <p>Anyways, lets start with the recipe</p>
-    <h2>Preparation</h2>
-    <h3>Ingredientes needed</h3>
-    <ul>Pasta
+    <div class="title big">Preparation</div>
+    <div class="title small">Ingredientes needed</div>
+    <ul>
         <li>Salt</li>
         <li>Cheese</li>
         <li>Canned Tomato Sauce</li>
         <li>Pasta</li>
 </ul>
-    <h3>Steps</h3>
+    <div class="title small">Steps</div>
     <ol>
         <li>Put water in a deep pan, salt it heavily, this is the seasoning that will go into the pasta 
             so don't skimp on it, you goddamn whore.
@@ -34,6 +35,7 @@
             next you can ask chatGPT to do it for you instead, the future is today, baby!
         </li>
     </ol>
-    <a href="../index.html">Want some more slut? click on me!</a>
+    <div id="anotation">I hope this was useful, little bitch.</div>
+    <button>Want some more slut? click on me!</button>
 </body>
 </html>
