--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes!</title>
+    <title>Alfi's recipes!</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <div class="titles">Recipes biach!</div>
-    <img src="recipes/images/spaghetti.jpg"> <img src="recipes/images/coffee.jpg"> <img src="recipes/images/relationship.jpg">
-    <ul>
-        <ul><a href="recipes/spaghetti.html">Spaghetti, for bitches.</a></ul>
-        <ul><a href="recipes/coffee.html">Coffee, for addicts.</a></ul>
-        <ul><a href="recipes/a-loving-partner.html">Getting a relationship, for incels</a></ul>
-    </ul>
+    <div class="container">
+        <div class="titles">Recipes biach!</div>
+        <div class="contained"><a href="recipes/spaghetti.html">Spaghetti</a></div>
+        <div class="contained"><a href="recipes/spaghetti.html">Coffee</a></div>
+        <div class="contained"><a href="recipes/spaghetti.html">Relationships</a></div>
+    <div class="cont">
+        <div class="item">Search</div>
+        <div class="item">Search</div>
+        <div class="item">Search</div>
+        <div class="item">Search</div>
+    </div>
 </body>
 </html>
