--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -11,12 +11,12 @@
     <div class="one">Coffee, for your caffeine addicted ass</div>
     <img src="images/coffee.jpg">
     <div class="one">How to make some good ass coffee</div>
-    <p>I bet you're addicted, that's okay, we all kinda are bro, the secret to get as much caffeine out of your 
-        coffee as possible is to let it sit before drinking it, let the beans release that good good.
-    </p>
-    <p>You should get harder roast if you like the bitter taste, otherwise get the lighter roast, both have around 
-        the same caffeine so it'll be okay w/e you get.
-    </p>
+    <div class="flex-container">
+        <div class="flexed"> I bet you're addicted, that's okay, we all kinda are bro, the secret to get as much caffeine out of your 
+        coffee as possible is to let it sit before drinking it, let the beans release that good good.</div>
+        <div class="flexed"> You should get harder roast if you like the bitter taste, otherwise get the lighter roast, both have around 
+        the same caffeine so it'll be okay w/e you get.</div>
+    </div>
     <div class="two">Ingredients</div>
     <ul>
         <li>Coffee of your choice</li>
